force-app/main/default/objects/Unpaid_Invoices__c/Unpaid_Invoices__c.object-meta.xml
<CustomObject>
    <description>This object will be used to store header information from the Sales Invoice and Sales Credit Note objects for outstanding customer invoices.  Records will be populated using the Analytic Snapshot feature in Salesforce.</description>
    <label>Unpaid Invoices</label>
    <nameField>
        <label>Unpaid Invoice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unpaid Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>