force-app/main/default/objects/Unpaid_Invoices__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Unpaid Invoices</relationshipLabel>
    <relationshipName>Unpaid_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>