force-app/main/default/objects/Unpaid_Invoices__c/fields/Aging_Band__c.field-meta.xml
<CustomField>
    <fullName>Aging_Band__c</fullName>
    <formula>IF(TODAY()- Due_Date__c &lt;= 0,&quot;1) Current&quot;, 
IF(AND(TODAY()- Due_Date__c &gt; 0,TODAY()- Due_Date__c &lt;= 30), &quot;2) 1-30 Days&quot;, 
IF(AND(TODAY()- Due_Date__c &gt; 30,TODAY()- Due_Date__c &lt;= 60), &quot;3) 31-60 Days&quot;, 
IF(AND(TODAY()- Due_Date__c &gt; 60,TODAY()- Due_Date__c &lt;= 90), &quot;4) 61-90 Days&quot;, 
IF(TODAY()- Due_Date__c &gt; 90,&quot;5) 91+ Days&quot;, 
&quot;ERROR&quot;
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging Band</label>
    <type>Text</type>
</CustomField>