force-app/main/default/objects/Unpaid_Invoices__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>c2g__codaCompany__c</referenceTo>
    <relationshipLabel>Unpaid Invoices</relationshipLabel>
    <relationshipName>Unpaid_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>