force-app/main/default/objects/Unpaid_Invoices__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Currency</label>
    <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
    <relationshipLabel>Unpaid Invoices</relationshipLabel>
    <relationshipName>Unpaid_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>