force-app/main/default/objects/Unpaid_Invoices__c/fields/Days_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Days_Outstanding__c</fullName>
    <formula>TODAY()-  Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>