force-app/main/default/objects/Unpaid_Invoices__c/fields/Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_Past_Due__c</fullName>
    <formula>IF(Due_Date__c &gt;= TODAY(),0, TODAY()- Due_Date__c)</formula>
    <label>Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>