force-app/main/default/objects/Unpaid_Invoices__c/fields/Dimension_1__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 1</label>
    <referenceTo>c2g__codaDimension1__c</referenceTo>
    <relationshipLabel>Unpaid Invoices</relationshipLabel>
    <relationshipName>Unpaid_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>