force-app/main/default/objects/Unpaid_Invoices__c/fields/Dimension_2__c.field-meta.xml
<CustomField>
    <fullName>Dimension_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 2</label>
    <referenceTo>c2g__codaDimension2__c</referenceTo>
    <relationshipLabel>Unpaid Invoices</relationshipLabel>
    <relationshipName>Unpaid_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>