force-app/main/default/objects/Unpaid_Invoices__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <formula>Sales_Invoice__r.Note__c</formula>
    <label>Note</label>
    <type>Text</type>
</CustomField>