force-app/main/default/objects/Unpaid_Invoices__c/fields/Outstanding_Value__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Value__c</fullName>
    <label>Outstanding Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>