force-app/main/default/objects/Unpaid_Invoices__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Period</label>
    <referenceTo>c2g__codaPeriod__c</referenceTo>
    <relationshipLabel>Unpaid Invoices</relationshipLabel>
    <relationshipName>Unpaid_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>