force-app/main/default/objects/Unpaid_Invoices__c/fields/Sales_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Sales_Credit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Credit Note</label>
    <referenceTo>c2g__codaCreditNote__c</referenceTo>
    <relationshipLabel>Unpaid Invoices</relationshipLabel>
    <relationshipName>Unpaid_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>