force-app/main/default/objects/Unpaid_Invoices__c/fields/Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Invoice</label>
    <referenceTo>c2g__codaInvoice__c</referenceTo>
    <relationshipLabel>Unpaid Invoices</relationshipLabel>
    <relationshipName>Unpaid_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>