force-app/main/default/objects/Unpaid_Invoices__c/fields/Sharing_Role__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Role__c</fullName>
    <label>Sharing Role</label>
    <length>4</length>
    <type>Text</type>
</CustomField>